// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./antdv-demo/docs/mentions/demo/async.md correctly 1`] = `
<div class="ant-mentions"><textarea rows="1"></textarea>
  <!---->
</div>
`;

exports[`renders ./antdv-demo/docs/mentions/demo/basic.md correctly 1`] = `
<div class="ant-mentions ant-mentions-focused"><textarea autofocus="" rows="1"></textarea>
  <!---->
</div>
`;

exports[`renders ./antdv-demo/docs/mentions/demo/form.md correctly 1`] = `
<form class="ant-form ant-form-horizontal">
  <div class="ant-row ant-form-item">
    <div class="ant-col ant-col-5 ant-form-item-label"><label for="coders" class="" title="Top coders">Top coders</label></div>
    <div class="ant-col ant-col-12 ant-form-item-control-wrapper">
      <div class="ant-form-item-control"><span class="ant-form-item-children"><div class="ant-mentions"><textarea rows="1" id="coders"></textarea><!----></div><!----></span>
        <!---->
        <!---->
      </div>
    </div>
  </div>
  <div class="ant-row ant-form-item">
    <div class="ant-col ant-col-5 ant-form-item-label"><label for="bio" class="ant-form-item-required" title="Bio">Bio</label></div>
    <div class="ant-col ant-col-12 ant-form-item-control-wrapper">
      <div class="ant-form-item-control"><span class="ant-form-item-children"><div class="ant-mentions"><textarea rows="3" placeholder="You can use @ to ref user here" id="bio"></textarea><!----></div><!----></span>
        <!---->
        <!---->
      </div>
    </div>
  </div>
  <div class="ant-row ant-form-item">
    <!---->
    <div class="ant-col ant-col-12 ant-col-offset-5 ant-form-item-control-wrapper">
      <div class="ant-form-item-control"><span class="ant-form-item-children"><button class="ant-btn ant-btn-primary" type="button"><!----><span>Submit</span></button><button style="margin-left: 8px;" class="ant-btn" type="button">
          <!----><span>Reset</span>
        </button>
        <!----></span>
        <!---->
        <!---->
      </div>
    </div>
  </div>
</form>
`;

exports[`renders ./antdv-demo/docs/mentions/demo/placement.md correctly 1`] = `
<div class="ant-mentions"><textarea rows="1"></textarea>
  <!---->
</div>
`;

exports[`renders ./antdv-demo/docs/mentions/demo/prefix.md correctly 1`] = `
<div class="ant-mentions"><textarea rows="1" placeholder="input @ to mention people, # to mention tag"></textarea>
  <!---->
</div>
`;

exports[`renders ./antdv-demo/docs/mentions/demo/readonly.md correctly 1`] = `
<div>
  <div style="margin-bottom: 10px;">
    <div class="ant-mentions ant-mentions-disabled"><textarea disabled="" rows="1" placeholder="this is disabled Mentions"></textarea>
      <!---->
    </div>
  </div>
  <div class="ant-mentions"><textarea rows="1" placeholder="this is readOnly a-mentions" readonly=""></textarea>
    <!---->
  </div>
</div>
`;
